Basic server setup, converted to React components

--- a/client/index.html
+++ b/client/index.html
@@ -7,8 +7,6 @@
     <title>Title</title>
 </head>
 <body>
-    <div id="marking-container"></div>
-    <button id="clear">Clear</button>
-    <button id="draw">Draw</button>
+    <div id="root"></div>
 </body>
 </html>
